--- a/Load Multiple Objects [TEST]/index.html
+++ b/Load Multiple Objects [TEST]/index.html
@@ -4,26 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>03 - Lights</title>
-    <style type="text/css">
-      body {
-        margin: 0;
-        background-color: gray;
-      }
-      canvas {
-        display: block;
-        background-color: white;
-      }
-    </style>
+    <title>3D Multiple Objects Test</title>
 </head>
 
 
 <body>
-  <canvas id="c"></canvas>
+  <script type="text/javascript" src="models/ball.js"></script>
+  <script type="text/javascript" src="models/body.js"></script>
+  <script type="text/javascript" src="models/bumper1.js"></script>
+  <script type="text/javascript" src="models/bumper2.js"></script>
+  <script type="text/javascript" src="models/bumper3.js"></script>
+  <script type="text/javascript" src="models/DL1.js"></script>
+  <script type="text/javascript" src="models/DL2.js"></script>
+  <script type="text/javascript" src="models/DL3.js"></script>
+  <script type="text/javascript" src="models/DL4.js"></script>
+  <script type="text/javascript" src="models/DL5.js"></script>
+  <script type="text/javascript" src="models/DL6.js"></script>
+  <script type="text/javascript" src="models/DR1.js"></script>
+  <script type="text/javascript" src="models/DR2.js"></script>
+  <script type="text/javascript" src="models/DR3.js"></script>
+  <script type="text/javascript" src="models/DR4.js"></script>
+  <script type="text/javascript" src="models/DR5.js"></script>
+  <script type="text/javascript" src="models/DR6.js"></script>
+  <script type="text/javascript" src="models/leftButton.js"></script>
+  <script type="text/javascript" src="models/leftFlipper.js"></script>
+  <script type="text/javascript" src="models/puller.js"></script>
+  <script type="text/javascript" src="models/rightButton.js"></script>
+  <script type="text/javascript" src="models/rightFlipper.js"></script>
   
   <script type="text/javascript" src="lib/utils.js"></script>
   <script type="text/javascript" src="lib/webgl-obj-loader.min.js"></script>
   
+  <script type="text/javascript" src="objPositions.js"></script>
   <script type="text/javascript" src="drawingStub.js"></script>
 </body>
 
