3D Flipper now working

--- a/Load Multiple Objects [TEST]/index.html
+++ b/Load Multiple Objects [TEST]/index.html
@@ -9,6 +9,10 @@
 
 
 <body>
+  <script type="text/javascript" src="physics/data/src/model.js"></script>
+  <script type="text/javascript" src="physics/data/src/controller.js"></script>
+  <script type="text/javascript" src="physics/data/src/main.js"></script>
+
   <script type="text/javascript" src="models/ball.js"></script>
   <script type="text/javascript" src="models/body.js"></script>
   <script type="text/javascript" src="models/bumper1.js"></script>
