--- a/Pinball/index.html
+++ b/Pinball/index.html
@@ -4,12 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
   <title>Pinball</title>
   <link rel="icon" href="icons/icon.png">
-</head>
 
-
-<body>
   <script type="text/javascript" src="physics/data/model.js"></script>
   <script type="text/javascript" src="physics/data/main.js"></script>
   <script type="text/javascript" src="physics/data/controller.js"></script>
@@ -19,6 +17,39 @@
 
   <script type="text/javascript" src="objPositions.js"></script>
   <script type="text/javascript" src="drawingStub.js"></script>
+</head>
+
+<body style="background-color: rgba(0.0, 25.5, 63.75, 1.0); overflow: hidden; margin: 0px;">
+  <canvas id="canvas" style="background-color: rgba(0.0, 25.5, 63.75, 1.0);">
+    Your browser does not support the HTML5 canvas element.
+  </canvas>
+
+  <div
+    style="font-family: Arcade; position: absolute; z-index: 1; right: 40px; bottom: 40px; background-color: black; border-width: 20px; border-style: ridge; border-color: white; opacity: 1.0; padding: 5px 10px 5px 10px; overflow:auto">
+    <p style="font-size: 45px; color: yellow; text-align: center;">Pinball!</p>
+
+    <H2 style="color: white; font-size: 22px;">Game Controls</H2>
+    <ul id="gameControls" style="color: lightgray; list-style-type: none;">
+    </ul>
+    <br>
+    <H2 style="color: white; font-size: 22px;">Camera Controls</H2>
+    <ul id="cameraControls" style="color: lightgray; list-style-type: none;">
+    </ul>
+  </div>
+
+  <div
+    style="font-family: Arcade; position: absolute; z-index: 1; left: 40px; top: 40px; background-color: black; border-width: 10px; border-style: ridge; border-color: white; opacity: 1.0; padding: 5px 10px 5px 10px; overflow:auto">
+    <p id="ballCounter" style="color: yellow"></p>
+  </div>
+
+  <div id="gameOverBg"
+    style="position: absolute; z-index: 1; width: 100%; height: 100%; top: 0px; bottom: 0px; background-color: black; opacity: 0.0;">
+  </div>
+  <div id="gameOverMsg"
+    style="font-family: Arcade; position: absolute; z-index: 2; width: 20%; height: 12%; margin: -6% 0 0 -10%; left: 50%; top: 50%; background-color: black; border-width: 10px; border-style: ridge; border-color: white; opacity: 0.0; padding: 5px 10px 5px 10px; overflow:auto">
+    <H2 style="color: red; font-size: 22px; text-align: center;">Game Over!</H2>
+    <p style="color: lightgray; text-align: center">Press F5 to start</p>
+  </div>
 </body>
 
 </html>
