Add background image test

--- a/Pinball/index.html
+++ b/Pinball/index.html
@@ -19,8 +19,8 @@
   <script type="text/javascript" src="drawingStub.js"></script>
 </head>
 
-<body style="background-color: rgba(0.0, 25.5, 63.75, 1.0); overflow: hidden; margin: 0px;">
-  <canvas id="canvas" style="background-color: rgba(0.0, 25.5, 63.75, 1.0);">
+<body style="background-image: url('textures/salagiochi.jpg'); overflow: hidden; margin: 0px;">
+  <canvas id="canvas" style="background-image: url('textures/salagiochi.jpg');">
     Your browser does not support the HTML5 canvas element.
   </canvas>
 
