Added sounds and icon transparency

--- a/Pinball/index.html
+++ b/Pinball/index.html
@@ -50,6 +50,18 @@
     <H2 style="color: red; font-size: 22px; text-align: center;">Game Over!</H2>
     <p style="color: lightgray; text-align: center">Press F5 to start</p>
   </div>
+
+  <audio id="sound_bumper1" type="audio/wav" src="sounds/bumper1.wav"></audio>
+  <audio id="sound_bumper2" type="audio/wav" src="sounds/bumper2.wav"></audio>
+  <audio id="sound_bumper3" type="audio/wav" src="sounds/bumper3.wav"></audio>
+  <audio id="sound_flipper_down" type="audio/wav" src="sounds/flipper_down.wav"></audio>
+  <audio id="sound_flipper_up" type="audio/wav" src="sounds/flipper_up.wav"></audio>
+  <audio id="sound_launch" type="audio/wav" src="sounds/launch.wav"></audio>
+  <audio id="sound_puller" type="audio/wav" src="sounds/puller.wav"></audio>
+  <audio id="sound_reload" type="audio/wav" src="sounds/reload.wav"></audio>
+  <audio id="sound_wall1" type="audio/wav" src="sounds/wall1.wav"></audio>
+  <audio id="sound_wall2" type="audio/wav" src="sounds/wall2.wav"></audio>
+  <audio id="sound_wall3" type="audio/wav" src="sounds/wall3.wav"></audio>
 </body>
 
 </html>
